posiGen_FullsendBox/src/objects/Campaign_Field_History__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Field_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Field Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Field_History_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Field History Records</relationshipLabel>
        <relationshipName>Campaign_Field_History_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Last Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_ID__c</fullName>
        <label>Lookup ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Campaign Field History</label>
    <nameField>
        <label>Campaign Field History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Field History Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>